[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main_screen/main_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_screen/create_caracter.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.203922, 0.294118, 1 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.5874
margin_bottom = -1.5874

[node name="NewGame" type="Button" parent="."]
margin_left = 668.524
margin_top = 517.964
margin_right = 932.524
margin_bottom = 577.964
text = "Nouvelle Partie"

[node name="QuitButton" type="Button" parent="."]
margin_left = 666.937
margin_top = 665.592
margin_right = 930.937
margin_bottom = 725.592
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGamePanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterMenu" type="Control" parent="NewGamePanel"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NewGamePanel/CharacterMenu"]
margin_left = 52.0
margin_top = 326.0
margin_right = 180.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="NewGamePanel/CharacterMenu"]
position = Vector2( 225.949, 341.302 )
playing = true

[node name="CharacterListMenu" type="MenuButton" parent="NewGamePanel/CharacterMenu"]
margin_left = 73.2097
margin_top = 161.215
margin_right = 207.21
margin_bottom = 198.215
text = "Choisir personnage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NewGamePanel/CharacterMenu"]
margin_left = 55.0
margin_top = 375.0
margin_right = 342.0
margin_bottom = 856.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="VBoxContainer" parent="NewGamePanel/CharacterMenu/ScrollContainer"]

[node name="MapMenu" type="Control" parent="NewGamePanel"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSize" type="Label" parent="NewGamePanel/MapMenu"]
margin_left = 1099.85
margin_top = 217.251
margin_right = 1214.85
margin_bottom = 238.251
text = "Taille du monde:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSize" type="HSlider" parent="NewGamePanel/MapMenu/WorldSize"]
margin_left = 229.491
margin_top = -5.74915
margin_right = 483.491
margin_bottom = 26.2509
min_value = 10.0
max_value = 50.0
step = 5.0
value = 20.0
scrollable = false
tick_count = 9
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGamePanel/MapMenu/WorldSize"]
margin_left = 141.803
margin_top = 3.0
margin_right = 209.803
margin_bottom = 17.0
text = "20 x 20"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest" type="Label" parent="NewGamePanel/MapMenu"]
margin_left = 1100.0
margin_top = 263.0
margin_right = 1215.0
margin_bottom = 283.0
text = "ForÃªts (wip):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForestSlider" type="HSlider" parent="NewGamePanel/MapMenu/Forest"]
margin_left = 229.491
margin_top = -5.74915
margin_right = 483.491
margin_bottom = 26.2509
max_value = 4.0
value = 1.0
scrollable = false
tick_count = 5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGamePanel/MapMenu/Forest"]
margin_left = 129.068
margin_top = 3.74915
margin_right = 197.068
margin_bottom = 17.7491
grow_horizontal = 0
text = "Rares"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaunchGameButton" type="Button" parent="NewGamePanel"]
margin_left = 730.468
margin_top = 717.953
margin_right = 944.468
margin_bottom = 796.953
disabled = true
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateCharacter" parent="NewGamePanel" instance=ExtResource( 2 )]
visible = false
margin_left = 28.9232
margin_top = 29.9241
margin_right = 598.923
margin_bottom = 556.924

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_button_pressed"]
[connection signal="value_changed" from="NewGamePanel/MapMenu/WorldSize/WorldSize" to="." method="_on_world_size_slider_value_changed"]
[connection signal="value_changed" from="NewGamePanel/MapMenu/Forest/ForestSlider" to="." method="_on_forest_slider_value_changed"]
[connection signal="pressed" from="NewGamePanel/LaunchGameButton" to="." method="_on_launch_game_button_pressed"]
